# NefaryousZork

./: .gitignore  CMakeLists.txt  NefaryousGame.qmlproject  NefaryousGame.qmlproject.qtds  qmlmodules  resources.qrc
content/: CMakeLists.txt  Screen01.ui.qml
imports/: CMakeLists.txt
imports/NefaryousGame/: CMakeLists.txt  Constants.qml  qmldir
imports/NefaryousGame/designer/: plugin.metainfo
src/: Entity.cpp  Entity.h  Exit.cpp  Exit.h  Game.cpp  Game.h  Room.cpp  Room.h  import_qml_plugins.h  main.cpp
src/Controller/: Game.cpp  Game.h  main.cpp
src/Model/: Entity.cpp  Entity.h  Enums.h  Exit.cpp  Exit.h  Interactable.h  Inventory.h  InventoryBase.h  Item.h  Key.cpp  Key.h  Player.cpp  Player.h  Potion.cpp  Potion.h  Room.cpp  Room.h  Weapon.cpp  Weapon.h
